# benchmark-IO

./: .env.example  .gitignore  Dockerfile.exporter  README.md  debug_docker.py  docker-compose.yml  docker_exporter.py  test_docker.py  需求描述.md
.trae/rules/: docker-rule.md
benchmark/: README.md  config.yaml
benchmark/analyze/: generate_charts.py  generate_report.py  parse_results.py  requirements.txt
benchmark/scripts/: benchmark.sh  check_env.sh  collect_results.sh  export_async_test.lua  export_stream_test.lua  export_sync_test.lua  query_test.lua  quick_start.sh  run_all.sh  verify_scripts.sh
docs/: api.md  deploy.md  performance-report-template.md  testing.md  验证步骤.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue  main.js
golang/: Dockerfile  README.md  go.mod  go.sum
golang/cmd/: main.go
init/: init.sql
init/generate_data/: Dockerfile  README.md  config.py  db.py  generator.py  main.py  requirements.txt
java/: .gitignore  Dockerfile  README.md  build.gradle  gradle.properties
monitor/: README.md  prometheus.yml
postgres/: pg_hba.conf  postgresql.conf
python/: .env.example  Dockerfile  README.md  gunicorn.conf.py  requirements.txt
rust/: .env.example  Cargo.toml  Dockerfile  README.md
rust/src/: config.rs  db.rs  main.rs  schema.rs
rust/src/controllers/: export.rs  mod.rs  order.rs
rust/src/middleware/: auth.rs
rust/src/models/: mod.rs  order.rs  task.rs
rust/src/services/: export.rs  mod.rs  order.rs  task.rs
rust/src/utils/: csv.rs  excel.rs
scripts/: start.sh
(+81 files in other folders)
