[package]
name = "benchmark-io"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2", features = ["postgres", "r2d2", "chrono", "numeric"] }
diesel_migrations = "2"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
xlsxwriter = "0.6"
async-stream = "0.3"
tokio-stream = "0.1"
csv = "1"
futures = "0.3"
actix-web-lab = "0.20"
parking_lot = "0.12"
bigdecimal = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
prometheus = "0.13"
lazy_static = "1.4"
bytes = "1"
pin-project-lite = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
